--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <div class="footer">All rights reserved. Based on the <a href="https://www.dack.com/web/bullshit.html" target="_blank">Bullshit Generator</a>.</div>
 
 </div>
-<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.slim.min.js"></script>
 <script type="text/javascript" src="bullshit.js"></script>
 </body>
 </html>
