--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
   <!-- <div style="display:flex">
     <input class="txtBS" type="text" id="textCopy" disabled />
   </div>   -->
-  <div class="footer">All rights reserved. Based on the <a href="https://www.dack.com/web/bullshit.html" target="_blank">Bullshit Generator</a>.</div>
+  <div class="footer">All rights reserved. Based on the <a href="https://www.dack.com/web/bullshit.html" target="_blank" rel="noopener">Bullshit Generator</a>.</div>
 
 </div>
-<script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.slim.min.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script type="text/javascript" src="bullshit.js"></script>
 </body>
 </html>
