--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 </head>
 <body>
 <div class="divWrapper">
-    <h1>Bullshit Generatrix - Resurrections</h1>
+    <h1>Bullshit Generatrix</h1>
+    <h2>Resurrections</h2>
     <br />
     <p>Making a Pitch deck? Want to impress a client/VC/investor/LT with serious sounding technobabble? <br />
       Click the button below and get inspired by the buzzword confabulations.
@@ -31,8 +32,22 @@
   <!-- <div style="display:flex">
     <input class="txtBS" type="text" id="textCopy" disabled />
   </div>   -->
-  <div class="footer">All rights reserved. Based on the <a href="https://www.dack.com/web/bullshit.html" target="_blank" rel="noopener">Bullshit Generator</a>.</div>
-
+  <br />
+  <div class="faqs">Frequently Asked Questions
+    <ul>
+      <li class="q">Why this theme?</li>
+      <li class="ans">Because the Matrix 4 came out last week.</li>
+      <li class="q">How is this related to the Matrix?</li>
+      <li class="ans">The original Bullshit Generator and the first Matrix movie came out almost two decades ago. Everybody liked the originals but didn't care enough to be heavily invested in a sequel. Yet, here we are.</li>
+      <li class="q">It's a cool theme and all, but I know how it could have been done better</li>
+      <li class="ans">Please share your feedback/thoughts/comments to ajaxfire [dot] a [at] gmail [dot] com. I would love to hear them.</li>
+      <li class="q">I'm a programmer, can I update the code for this site?</li>
+      <li class="ans">You can fork off the <a href="https://github.com/Ajaxfire/bullshit" target="_blank" rel="noopener">source</a> from Github</li>
+    </ul>
+  </div>
+  <br />
+  <div class="footer">All rights reserved. Inspired from the original <a href="https://www.dack.com/web/bullshit.html" target="_blank" rel="noopener">Bullshit Generator</a>.</div>
+ 
 </div>
 <script type="text/javascript" src="jquery-3.6.0.min.js"></script>
 <script type="text/javascript" src="bullshit.js"></script>
