CSS Tweaks - Ready to roll

--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
   <div>
       <div class="btnGen" onclick="mkBull()">Make Bullshit!</div>
   </div>
-  <br />
-  <!-- <div style="display:flex">
+ <!--  <br />
+  <div style="display:flex">
     <input class="txtBS" type="text" id="textCopy" disabled />
-  </div>   -->
-  <br />
+  </div>  
+  <br /> -->
  <!-- <div class="faqs">Frequently Asked Questions
     <ul>
       <li class="q">Why this theme?</li>
@@ -63,8 +63,8 @@
       <li class="q">I'm a programmer, can I update the code for this site?</li>
       <li class="ans">You can fork off the <a href="https://github.com/Ajaxfire/bullshit" target="_blank" rel="noopener">source</a> from Github</li>
     </ul>
-  </div> -->
-  <br />
+  </div> 
+  <br />-->
   <div class="footer">This is a satire. Not officially affiliated with Shark Tank or Shark Tank India. Source code on <a href="https://github.com/Ajaxfire/bullshit" target="_blank" rel="noopener">Github</a>.</div>
  
 </div>
